--- a/test/laplacian_pyramid/src/CMakeLists.txt
+++ b/test/laplacian_pyramid/src/CMakeLists.txt
@@ -2,4 +2,4 @@ target_sources(${PROJECT_NAME} PRIVATE
         main.cpp
         environment.hpp
         environment.cpp
-        template_lib_test.cpp)
+        laplacian_pyramid_test.cpp)
