--- a/test/laplacian-pyramid/CMakeLists.txt
+++ b/test/laplacian-pyramid/CMakeLists.txt
@@ -18,6 +18,13 @@ add_custom_command(TARGET ${PROJECT_NAME}
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:gmock> ${PROJECT_BINARY_DIR}/
         )
 
+foreach(OpenCV_LIB ${OpenCV_LIBS})
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E echo "Copy $<TARGET_FILE:${OpenCV_LIB}> to $<TARGET_FILE_DIR:${PROJECT_NAME}>"
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:${OpenCV_LIB}> $<TARGET_FILE_DIR:${PROJECT_NAME}>
+            )
+endforeach()
+
 add_subdirectory(src)
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
